# pyroll-hitchcock-roll-flattening

./: .pytask.sqlite3  LICENSE  README.md  hatch.toml  pyproject.toml
docs/: .gitignore  .pytask.sqlite3  docs.aux  docs.bbl  docs.bcf  docs.blg  docs.md  docs.run.xml  docs.tex  refs.bib  task_pandoc_docs.py
pyroll/: hitchcock_roll_flattening.py
pyroll-core/pyroll/core/roll_pass/base_plugins/: rolls.py
pyroll/hitchcock_roll_flattening/: __init__.py  report.py
pyroll/hitchcook_roll_flattening/: __init__.py  impls.py  report.py  specs.py
pyroll_hitchcook_roll_flattening/: __init__.py  impls.py  report.py  specs.py
tests/: config.yaml  test_solve.py  test_solve3.py
