[tool.poetry]
name = "pyroll-hitchcock-roll-flattening"
version = "1.0.0"
description = "PyRoll plugin providing the roll flattening model from J. Hitchcook."
authors = [
]
license = ""

[tool.poetry.dependencies]
python = ">= 3.9, <3.11"
pyroll = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
pyroll = { path = "pyroll-core", develop = true }
pytask = "^0.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
