[tool.poetry]
name = "pyroll-hitchcock-roll-flattening"
version = "1.0.0"
description = "PyRoll plugin providing the roll flattening model from J. Hitchcock."
authors = [
    "Christoph Renzing <christoph.renzing@imf.tu-freiberg.de>",
    "Max Weiner <max.weiner@imf.tu-freiberg.de>"

]
readme = "README.md"
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Manufacturing",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering"
]

license = "BSD-3-Clause"
homepage = "https://pyroll-project.github.io/"
repository = "https://github.com/pyroll-project/pyroll-hitchcock-roll-flattening"
documentation = "https://github.com/pyroll-project/pyroll-hitchcock-roll-flattening/blob/main/docs/docs.pdf"
packages = [
    { include = "pyroll/hitchcock_roll_flattening" }
]

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
pyroll = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
pyroll = { git = "https://github.com/pyroll-project/pyroll-core", branch = "main", develop = true }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

