[project]
name = "pyroll-hitchcock-roll-flattening"
description = "PyRolL plugin providing the roll flattening model from J. Hitchcock."
authors = [
    { name = "Christoph Renzing", email = "christoph.renzing@imf.tu-freiberg.de" },
    { name = "Max Weiner", email = "max.weiner@imf.tu-freiberg.de" }
]

license = "BSD-3-Clause"
homepage = "https://pyroll-project.github.io/"
repository = "https://github.com/pyroll-project/pyroll-hitchcock-roll-flattening"
documentation = "https://github.com/pyroll-project/pyroll-hitchcock-roll-flattening/blob/main/docs/docs.pdf"
packages = [
    { include = "pyroll/hitchcock_roll_flattening" }
]
readme = "README.md"
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Manufacturing",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering"
]
requires-python = ">=3.9"
dependencies = [
    "pyroll-core ~= 2.1.9"
]

dynamic = ["version"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


